# python-constancy

./: .editorconfig  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
constancy/: __init__.py  core.py
tests/: test_core.py
